GNOME Bugzilla – Bug 668561
gresource-tool not internationalized
Last modified: 2012-01-24 22:38:16 UTC
Translations for gresource don't work. I think it's because it never initializes gettext etc in main()
The following fix has been pushed: a3b91b3 gresource: Initialize i18n
Created attachment 206036 [details] [review] gresource: Initialize i18n ...otherwise translations don't work. Pointed out by Kjartan Maraas.