gresource: Initialize i18n

...otherwise translations don't work. Pointed out by Kjartan Maraas.

https://bugzilla.gnome.org/show_bug.cgi?id=668561